--- a/client/templates/keep.html
+++ b/client/templates/keep.html
@@ -1,7 +1,7 @@
-<div class="notes">
+<div class="notes" style="background-color: {{val.color}}">
    <h3>{{val.title}}</h3>
    <p>{{val.desc}}</p> 
-   <span class="glyphicon glyphicon-trash" ng-click="delete($index)"></span>
+   <span class="glyphicon glyphicon-trash" ng-click="delete(val.id)"></span>
    <span class="glyphicon glyphicon-pencil" ng-click="edit($index)"></span>
    <div class="clearfix"></div>
 </div>
